# face_recognition_system_plus

./: .gitignore  FINAL_TRAINING_REPORT.md  README.md  TRAINING_REPORT.md  TRAINING_STATUS.md
cpp/: CMakeLists.txt
cpp/examples/: benchmark.cpp  sdk_test.cpp
cpp/include/: det_infer.h  rec_feature.h  search_util.h
cpp/src/det/: ultra_det_cuda.cu  ultra_det_trt.cpp
cpp/src/rec/: ultra_rec_cuda.cu  ultra_rec_trt.cpp
cpp/src/retrieval/: billion_search.cpp  index_manager.cpp
cpp/src/sdk/: face_sdk.cpp  sdk_interface.h
docs/: API.md  DEPLOYMENT.md
python/: TRAINING.md  __init__.py  actual_training.py  automated_training.py  build_face_db.py  demo_pipeline.py  generate_checkpoints.py  main.py  requirements.txt  test_inference.py  train.py  train_demo.py  train_detection.py  train_recognition.py  train_ultra_det.py
python/checkpoints/detection/: ultra_tiny_det_epoch_5.pth.json
python/checkpoints/recognition/: ultra_precise_rec_epoch_5.pth.json
python/configs/: config.yaml
python/deploy/: fastapi_server.py  inference_pipeline.py
python/det/: det_dataset.py  det_trainer.py  ultra_tiny_det.py
python/indexes/: face_index.json
python/rec/: rec_dataset.py  rec_trainer.py  ultra_precise_rec.py
python/retrieval/: billion_iadm.py  index_builder.py  search_engine.py
python/utils/: __init__.py
scripts/: build.bat  build.sh
